<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/login_circle"
        android:padding="20dp"
        android:src="@drawable/login_logo"
        android:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:gravity="center_horizontal"
        android:text="@string/company_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_name"
        android:layout_centerInParent="true"
        android:text="@string/app_desc"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tag"
        android:layout_centerInParent="true"
        android:text="@string/email"
        android:textSize="12sp" />
</RelativeLayout>