<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.darshanvineeth.turn1.StartActivity">

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="2"
        android:src="@drawable/splash_image"
        android:contentDescription="Get Started Image" />


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_weight="0.85"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_image"
            android:text="@string/app_desc"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/line1"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:layout_below="@id/textView1"
            android:src="@drawable/login_dash"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:src="@drawable/splash_image"
            android:text="@string/start_tag"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/get_started">

        <Button
            android:id="@+id/button_go"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/get_started"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/ic_go"
            android:layout_width="50dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-medium"
            android:padding="20dp"
            android:src="@drawable/icn_back"
            android:tint="@color/colorPrimary"
            android:contentDescription="go_icon" />
    </RelativeLayout>
</LinearLayout>